--- a/gloss-counter.cabal
+++ b/gloss-counter.cabal
@@ -12,10 +12,10 @@ executable gloss-counter
 						gloss,
 						random
 	hs-source-dirs:		src
-	other-modules:		Player
-						Grid
+	other-modules:		Grid
 						State
 						View
 						Tick
 						Controls
+						Moveable
 	default-language:	Haskell2010
